# RodiniaBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  build-benchmark.cmake  rodinia_note
benchmarks/: CMakeLists.txt  LICENSE.md  README.md
benchmarks/backprop/: CMakeLists.txt  backprop.sac  backprop_no_boundary.sac
benchmarks/bfs/: CMakeLists.txt  README  bfs.sac  convert_input.py
benchmarks/bfs/cuda/: bfs.cu  kernel2.cu
benchmarks/bfs/openmp/: Makefile  bfs.cpp
benchmarks/bfs/sac/: test.sac
benchmarks/cfd/: CMakeLists.txt  README
benchmarks/cfd/cuda/: run
benchmarks/cfd/input/: fvcorr.domn.1024  fvcorr.domn.8  fvcorr.domn.8192  sac_input_1024  sac_input_64  sac_input_8
benchmarks/cfd/openmp/: euler3d_cpu_double.cpp
benchmarks/cfd/sac/: euler3d_fusion.sac  test.sac
benchmarks/common/: common.mk
benchmarks/hotspot/: CMakeLists.txt  convert_input.py  hotspot.sac
benchmarks/hotspot/cuda/: Makefile  hotspot_cuda_shr_float.cu  run_noshr  run_shr
benchmarks/hotspot/openmp/: Makefile  hotspot_openmp_double.c  instrument.py  run_openmp  run_seq
benchmarks/hotspot/sac/: Makefile  instrument.py
benchmarks/kmeans/: README  convert_input.py  instrument.py  kmeans.sac
benchmarks/kmeans/cuda/: cluster.c  kmeans.c  kmeans_cuda.cu  kmeans_cuda_kernel.cu
benchmarks/kmeans/input/: 100.txt
benchmarks/kmeans/openmp/: cluster.c  kmeans.c  run
benchmarks/kmeans/serial/: Makefile  cluster.c  kmeans.c  kmeans_clustering.c  run
benchmarks/leukocyte/: CMakeLists.txt  README  detect.sac
benchmarks/leukocyte/cuda/: detect_main.c  find_ellipse.c  track_ellipse.c
benchmarks/lud/: .gitignore  CMakeLists.txt  Makefile  README  instrument_seq.py  lud.sac
benchmarks/lud/cuda/: instrument_cuda_manual.py  lud.cu  run_noshr  run_shr
benchmarks/lud/input_gen/: gen_input.c
benchmarks/lud/openmp/: Makefile  lud_omp.c
benchmarks/lud/sac/: README  analyze_kernel_time.py  (+3 more)
benchmarks/nw/: CMakeLists.txt  README  compile_and_run.py  needle_diagonal.cu
benchmarks/pathfinder/: CMakeLists.txt
benchmarks/srad/: CMakeLists.txt  README  srad.sac
(+153 files in other folders)
