cmake_minimum_required(VERSION 3.5)
ADD_SUBDIRECTORY(backprop backprop)
ADD_SUBDIRECTORY(bfs bfs)
ADD_SUBDIRECTORY(cfd cfd)
ADD_SUBDIRECTORY(hotspot hotspot)
ADD_SUBDIRECTORY(leukocyte leukocyte)
ADD_SUBDIRECTORY(lud lud)
ADD_SUBDIRECTORY(nw nw)
ADD_SUBDIRECTORY(pathfinder pathfinder)
ADD_SUBDIRECTORY(srad srad)
